Refactor na forma de validação dos dados para facilitar manutenção e reaproveitamento de código

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:sqlite:cadastros.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.jpa.properties.hibernate.dialect=com.semnome.banco.SQLiteDialect
+spring.jpa.properties.hibernate.dialect=com.cadastra.cliente.banco.SQLiteDialect
