--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.datasource.url=jdbc:sqlite:cadastros.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
