--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,16 @@
 			<artifactId>dbunit</artifactId>
 			<version>2.4.9</version>
 		</dependency>
+		<dependency>
+			<groupId>com</groupId>
+			<artifactId>rest.client</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.9.0</version>
+		</dependency>
 
 	</dependencies>
 
