Finalização dos testes de integração

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.properties.hibernate.dialect=com.cadastra.cliente.banco.SQLiteDialect
 
 server.port=8080
+
+logging.level.=OFF
