--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.jpa.show-sql=false
 spring.datasource.url=jdbc:sqlite:cadastros.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.properties.hibernate.dialect=com.cadastra.cliente.banco.SQLiteDialect
+
+logging.level.=OFF
