--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,19 @@
     <groupId>com.h2database</groupId>
     <artifactId>h2</artifactId>
 </dependency>		
+
+<dependency>
+    <groupId>io.springfox</groupId>
+    <artifactId>springfox-swagger2</artifactId>
+    <version>2.6.1</version>
+</dependency>
+
+<dependency>
+    <groupId>io.springfox</groupId>
+    <artifactId>springfox-swagger-ui</artifactId>
+    <version>2.4.0</version>
+</dependency>
+
 	</dependencies>
 
 	<properties>
@@ -50,6 +63,7 @@
 					<downloadJavadocs>true</downloadJavadocs>
 				</configuration>
 			</plugin>
+			
 		</plugins>
 	</build>
 
